--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/router": "^17.1.0",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "ngx-owl-carousel-o": "^17.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
